# mergeradar

./: .python-version  README.md  contract.md  example-report.md  pyproject.toml
samples/: auth-change.diff  docs-only.diff
src/mergeradar/: __main__.py  cli.py  models.py
src/mergeradar/analysis/: classifier.py  context_builder.py  recommendations.py  scorer.py
src/mergeradar/git/: diff_loader.py  repo_inspector.py
src/mergeradar/renderers/: json.py  markdown.py
src/mergeradar/rules/: __init__.py  auth.py  base.py  db.py  evidence.py  infra.py  scope.py
src/mergeradar/utils/: patterns.py
tests/: test_classifier.py  test_rules.py
